ghost/admin/app/styles/components/publishmenu.css
/* ... */
.gh-publish-confirmation-with-feedback {
    display: flex;
    justify-content: space-between;
}

.gh-revert-to-draft {
    color: var(--green-d1);
    font-weight: 500;
}

.gh-back-to-editor {
    color: var(--midgrey);
    font-size: 1.35rem;
    font-weight: 400;
    letter-spacing: .4px;
    transition: color .2s ease;
    -webkit-font-smoothing: subpixel-antialiased;
}

.gh-back-to-editor:hover {
    color: var(--darkgrey);
}

.gh-post-bookmark-wrapper {
    margin-bottom: 4rem;
}

.gh-post-bookmark {
    display: grid;
    grid-template-columns: 1fr minmax(0, 2fr);
    width: 100%;
    max-width: 640px;
    margin-top: 1.6rem;
    background: var(--white);
    box-shadow: 0 0 0 1px rgba(0,0,0,.03), 0px 2px 5px rgba(0, 0, 0, 0.07);
    border-radius: var(--border-radius);
    transition: all 0.3s ease-in-out;
}

.gh-post-bookmark:hover {
    box-shadow:
        0px 54px 80px rgba(0, 0, 0, 0.07),
        0px 19.7109px 29.2013px rgba(0, 0, 0, 0.0482987),
        0px 9.56927px 14.1767px rgba(0, 0, 0, 0.0389404),
        0px 4.69103px 6.94968px rgba(0, 0, 0, 0.0310596),
        0px 1.85484px 2.74791px rgba(0, 0, 0, 0.0217013),
        0 0 0 1px rgba(0,0,0,.03);
    transition: all 0.3s ease-in-out;
    transform: translateY(-4px);
}

.gh-post-bookmark-image {
    display: inherit;
}

.gh-post-bookmark-image img {
    width: 100%;
    height: 100%;
    max-height: 152px;
    object-fit: cover;
    border-radius: var(--border-radius) 0 0 var(--border-radius);
}

.gh-post-bookmark-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 2rem;
    overflow: hidden;
}

.gh-post-bookmark-content.no-image {
    grid-column: span 2;
}

.gh-post-bookmark-title {
    display: -webkit-box;
    margin-bottom: .4rem;
    color: var(--darkgrey);
    font-size: 1.5rem;
    letter-spacing: 0;
    font-weight: 600;
    line-height: 1.4em;line-clamp: 2;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.gh-post-bookmark-text {
    margin-bottom: 1.6rem;
    color: var(--middarkgrey);
    font-size: 1.4rem;
    font-weight: 400;
}

.gh-post-bookmark-details {
    display: flex;
    align-items: center;
    color: var(--middarkgrey);
    font-size: 1.4rem;
    font-weight: 400;
    overflow: hidden;
    text-overflow: ellipsis;
}

.gh-post-bookmark-site-title {
    flex-shrink: 0;
    max-width: 362px;
    overflow: hidden;
    color: var(--darkgrey);
    font-weight: 500;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-post-bookmark-authors {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-post-bookmark-authors:before {
    content: "•";
    margin: 0 6px;
    color: var(--darkgrey);
}

.gh-post-bookmark-site-icon {
    flex-shrink: 0;
    width: 20px;
    height: 20px;
    margin-right: 6px;
}

/* Publish flow modal
/* ---------------------------------------------------------- */

.modal-post-success {
    max-width: 600px;
    --padding: 36px;
    --radius: 12px;
}

.modal-post-success .modal-content {
    padding: var(--padding);
    border-radius: var(--radius);
}

.modal-post-success a {
    text-decoration: none;
    color: inherit;
}

.modal-post-success a:hover .gh-post-card {
    background: var(--whitegrey-l2);
}

.modal-post-success .gh-post-card {
    border-radius: 8px;
    border: 1px solid var(--lightgrey-l1);
    box-sizing: border-box;
    margin: 24px 0 0 0;
}

.modal-post-success .modal-image {
    aspect-ratio: 16 / 7.55;
    overflow: hidden;
}

.modal-post-success .modal-image img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 7px 7px 0 0;
    box-sizing: border-box;
}

.modal-post-success .modal-header {
    margin: 0;
}

.modal-post-success .modal-header h1 {
    display: flex;
    flex-direction: column;
    margin: 0;
    font-size: 3.2rem;
    font-weight: 700;
    letter-spacing: -0.03em;
}

.modal-post-success .modal-header h1 span:has(+ span) {
    color: var(--green);
}

.modal-post-success .modal-body {
    margin-top: 10px;
    font-size: 1.6rem;
    line-height: 1.4;
    letter-spacing: -0.01em;
    text-wrap: pretty;
    padding: 16px 24px 16px 24px;
}

.modal-post-success .modal-body p {
    font-size: 1.6rem;
    line-height: 1.5em;
}

.modal-post-success .modal-body p.post-excerpt {
    -webkit-line-clamp: 2;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
    margin: 0 0 16px 0;
}

.modal-post-success .email {
    font-size: 1.6rem;
    padding: 0;
}

.modal-post-success .modal-body .gh-post-details {
    display: flex;
    align-items: center;
    gap: 4px;
    margin-bottom: 16px;
    font-size: 1.4rem;
}

.modal-post-success .modal-body .gh-post-details .gh-post-bookmark-site-name {
    font-weight: 600;
    flex-shrink: 0;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.modal-post-success .modal-body .gh-post-bookmark-authors::before {
    margin-left: 4px;
}

.modal-post-success .modal-body .gh-post-bookmark-site-icon {
    width: 24px;
    height: 24px;
}

.modal-post-success .modal-body strong.nowrap {
    text-wrap: nowrap;
}

.modal-post-success .modal-footer {
    margin-top: 16px;
    gap: 16px;
    padding: 0;
}


.modal-post-success .modal-footer-email {
    background: var(--white);
    margin-top: 36px;
    gap: 16px;
    padding: 0;
    border: none;
    border-radius: 0;
    text-align: right;
}

.modal-post-success .modal-footer .share-buttons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-items: center;
    gap: 16px;
}

.modal-post-success .modal-footer .gh-btn {
    min-width: 64px;
    height: 40px;
    border-radius: var(--border-radius);
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal-post-success .modal-footer .copy-preview-link {
    background: var(--whitegrey-l1);
}
/* ... */

